--- a/fields/index.css
+++ b/fields/index.css
@@ -60,3 +60,21 @@ select{
     right: 2rem;
     
 }
+
+.address .flex{
+    gap: 1.25rem;
+
+}
+
+.input-wrapper:has(:disabled){
+    opacity: .5;
+}
+
+input{
+    &[disabled]{
+        background-color: var(surface-disabled) ;
+
+        border: 1px solid var(--stroke-default);
+        color: var(--text-primary);
+    }
+}
