--- a/fields/index.css
+++ b/fields/index.css
@@ -77,4 +77,32 @@ input{
         border: 1px solid var(--stroke-default);
         color: var(--text-primary);
     }
+
+    &:invalid{
+        border: 0.125rem solid var(--semantic-error);
+    }
+
+    & + small{
+        font: var(--text-sm);
+        color: #78716c;
+
+        display: inline-block;
+        margin-top: .25rem;
+    }
+
+    &[required] + .error{
+        display: flex ;
+        align-items: center;
+        gap: 0.25;
+
+        font: var(--text-sm);
+        color: var(--semantic-error);
+
+        margin-top: .25rem;
+    }
+
+    &:not(.focus):valid + .error{
+        display: none;
+
+    }
 }
