--- a/styles/forms.css
+++ b/styles/forms.css
@@ -2,7 +2,7 @@
 
 form{
     margin-top: 3rem;
-
+    
 
 }
 
@@ -24,4 +24,8 @@ label{
 
     display: block;
     margin-bottom: .25rem;
+}
+
+fieldset + fieldset{
+    margin-top: 3rem;
 }
